# MIA-RAG-Implementation

./: CHANGES.md  CONTEXT.md  LOGS.md  MIA_RAG_Attack.ipynb  README.md  RESEARCH-PAPER.md  ablation_draft_responses.md  create_notebook.py  experiment_data.csv  experiment_results.md  experiment_results_old.md  fix_deps.py  mia_rag_attack.py  process_results.py  pyproject.toml  requirements.txt  results_report.md
archives/: CHANGES-2.md  LOGS.md  experiment_results.md  results_report.md
configs/: default.yaml  lean_ablation.yaml  smoke.yaml
results/2026-01-12/: experiment_data.csv  experiment_results.md
results/2026-01-25/: experiment_results.md
results/2026-02-28/: results_report.md
results/2026-03-30/142547/: report.md  resolved_config.yaml  runs.jsonl  summary.csv
results/2026-03-30/142547/studies/ablation_gamma/: report.md  resolved_config.yaml  runs.jsonl  summary.csv
results/2026-03-30/142547/studies/ablation_mask_count/: report.md  resolved_config.yaml  runs.jsonl  summary.csv
results/2026-03-30/142547/studies/ablation_model_family/: report.md  resolved_config.yaml  runs.jsonl  summary.csv
results/2026-04-11/131846/: report.md  resolved_config.yaml  runs.jsonl  summary.csv
scripts-deprecated/: check_imports.py  check_ollama.py  test_env.py
src/mia_rag/: __init__.py  __main__.py  cli.py  config.py  legacy.py  pipeline.py  reporting.py  runner.py  types.py
src/mia_rag/datasets/: __init__.py  base.py  loaders.py
tests/: test_config.py  test_datasets.py  test_pipeline.py  test_reporting.py  test_runner.py  test_wrappers.py
(+61 files in other folders)
