[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mia-rag"
version = "0.1.0"
description = "Package-based MBA RAG experiment runner with YAML-driven sweeps."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "PyYAML>=6.0",
  "torch>=2.0.0",
  "transformers>=4.30.0",
  "datasets>=2.14.0",
  "scikit-learn>=1.3.0",
  "pandas>=2.0.0",
  "tqdm>=4.65.0",
  "matplotlib>=3.8.0",
  "langchain>=0.3.0",
  "langchain-community>=0.3.0",
  "langchain-huggingface>=0.0.1",
  "langchain-ollama>=0.1.0",
  "faiss-cpu>=1.7.4",
  "sentence-transformers>=2.2.2",
  "rank-bm25>=0.2.2",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
